增加登录及权限查看功能

--- a/config/application-prd.yml
+++ b/config/application-prd.yml
@@ -2,9 +2,9 @@ spring:
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: vulibrary
-    password: vulibrary123456
-    url: jdbc:mysql://10.206.0.3:3306/vulnerability_library?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
+    username: vuln
+    password: vuln123456
+    url: jdbc:mysql://10.206.0.3:3306/vuln_demo?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
   data:
     redis:
       cluster:
