--- a/config/application-dev.yml
+++ b/config/application-dev.yml
@@ -28,7 +28,7 @@ springdoc:
   api-docs:
     path: /v3/api-docs
   group-configs:
-    - group: 'vuln-library'
+    - group: 'vuln-demo'
       paths-to-match: '/**'
       packages-to-scan: com.maita.yuedian.vulnerability.library.controller
 ### knife4j的增强配置，不需要增强可以不配
