--- a/config/application.yml
+++ b/config/application.yml
@@ -55,4 +55,5 @@ system:
   gen-password: asdf1234*
   max-token-expire-seconds: 28800
   skip-permission-path: /common/**
+  replace-uri-prefix: /vuln-demo
   secret-key: abcdefgabcdefg12
