--- a/config/application-docker2.yml
+++ b/config/application-docker2.yml
@@ -4,19 +4,19 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: vuln
     password: vuln123456
-    url: jdbc:mysql://10.206.0.3:3306/vuln_demo?characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://mysql:3306/vuln_demo?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=GMT%2B8&nullCatalogMeansCurrent=true&allowPublicKeyRetrieval=true
   data:
     redis:
-      cluster:
-        nodes: 10.100.4.205:8001,10.100.4.205:8002,10.100.4.205:8003  # 集群节点列表
-        max-redirects: 3  # 最大重定向次数
+      host: redis
+      port: 6379
+      password: password123456
+      database: 0
       lettuce:
-        cluster:
-          refresh:
-            adaptive: true  # 自动刷新集群拓扑
-            period: 2000    # 刷新间隔（毫秒）
-        timeout: 6000       # 超时时间
-
+        pool:
+          max-active: 8       # 最大连接数
+          max-idle: 8         # 最大空闲连接
+          min-idle: 0         # 最小空闲连接
+          max-wait: -1ms      # 无限等待
 
 # springdoc-openapi项目配置
 springdoc:
@@ -38,9 +38,7 @@ knife4j:
     # 是否启用 Host
     enable-host: true
     # 启用 Host 地址
-    enable-host-text: "http://119.45.169.164"
-  # 生产环境关闭文档
-  production: false
+    enable-host-text: "http://123.59.0.83:12082"
 
 system:
   redis-cluster.enable: true
